--- a/SwimStoreApi/SwimStoreApi.csproj
+++ b/SwimStoreApi/SwimStoreApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,7 +9,11 @@
   <ItemGroup>
     <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="7.0.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.12.1" />
-    <PackageReference Include="HotChocolate.Data" Version="12.12.1" />  
+    <PackageReference Include="HotChocolate.Data" Version="12.12.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
+    <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />  
 	  
   </ItemGroup>
 
