--- a/SwimStoreData/SwimStoreData.csproj
+++ b/SwimStoreData/SwimStoreData.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
 	  <PackageReference Include="Dapper" Version="2.0.123" />
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
 	  <PackageReference Include="Npgsql" Version="6.0.6" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+	  <PackageReference Include="Serilog" Version="2.11.0" />
+	  <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
