--- a/SwimStoreApi/SwimStoreApi.csproj
+++ b/SwimStoreApi/SwimStoreApi.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="7.1.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.15.0" />
     <PackageReference Include="HotChocolate.Data" Version="12.15.0" />
+    <PackageReference Include="HotChocolate.Types.Analyzers" Version="12.15.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
     <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
