--- a/SwimStoreApi/SwimStoreApi.csproj
+++ b/SwimStoreApi/SwimStoreApi.csproj
@@ -14,8 +14,10 @@
     <PackageReference Include="FluentMigrator.Runner.Postgres" Version="3.3.2" />
     <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="7.1.1" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="12.15.0" />
+    <PackageReference Include="HotChocolate.AspNetCore.Authorization" Version="12.15.0" />
     <PackageReference Include="HotChocolate.Data" Version="12.15.0" />
     <PackageReference Include="HotChocolate.Types.Analyzers" Version="12.15.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.10" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
     <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
